# hot-retro-term

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/commands/: dorothy.md  kristen.md  muelsyse.md
app/: CMakeLists.txt  app.pro  curvatureinputfilter.cpp  curvatureinputfilter.h  fontmanager.cpp  fontmanager.h  main.cpp
app/qml/: ApplicationSettings.qml  AsciiDivider.qml  AsciiFocusBorder.qml  AsciiTabBar.qml  BurnInEffect.qml  CommandPalette.qml  PaneSplitContainer.qml  PaneTreeNode.qml  PreprocessedTerminal.qml  SettingsGeneralTab.qml  ShaderTerminal.qml  TerminalContainer.qml  TerminalTabs.qml  TerminalWindow.qml  resources.qrc
app/shaders/: terminal_dynamic.frag  terminal_dynamic.frag.qsb  terminal_dynamic.vert  terminal_dynamic.vert.qsb  terminal_static.frag  terminal_static.frag.qsb  window_curvature.frag  window_curvature.frag.qsb  window_curvature.vert  window_curvature.vert.qsb
